[package]
name = "fstlc"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"

[dependencies]
derive_more = "0.14.0"
itertools = "0.8.0"
lalrpop-util = "0.16.3"
lazy_static = "1.3.0"
log = "0.4.6"
regex = "1.1.0"
stderrlog = "0.4.1"
structopt = "0.2.14"

[build-dependencies]
lalrpop = "0.16.3"

[dev-dependencies]
pretty_assertions = "0.6.1"
